--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
+    "convert-video": "^1.0.0",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "6.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-core-video-player": "^0.2.0",
+    "vue-plyr": "^7.0.0",
     "vue-router": "^3.2.0",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
@@ -30,7 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^4.12.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
